unpackaged/main/default/objects/API_Connector__Lead_Map__mdt/API_Connector__Lead_Map__mdt.object-meta.xml
<CustomObject>
    <label>Lead Map</label>
    <pluralLabel>Lead Maps</pluralLabel>
</CustomObject>