unpackaged/main/default/objects/API_Connector__Lead_Map__mdt/fields/API_Connector__Authorization__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__Authorization__c</fullName>
    <label>Authorization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>