unpackaged/main/default/objects/API_Connector__Lead_Map__mdt/fields/API_Connector__Endpoint__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__Endpoint__c</fullName>
    <label>Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>