unpackaged/main/default/objects/API_Connector__Lead_Map__mdt/fields/API_Connector__Mapping_Output_Fields__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__Mapping_Output_Fields__c</fullName>
    <label>Mapping Output Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>